# Asset402

./: .gitignore  .vercelignore  Asset402_Final_PRD.md  Asset402_PRD.md  README.md  cp.cmd  cp.rs  polyfill-all.js  polyfill.js
agents/: .env.example  package.json  tsconfig.json
agents/src/: api-server.ts  collector-agent.ts  guardian-agent.ts  listing-agent.ts  maintenance-oracle-agent.ts  orchestrator.ts  risk-agent.ts  vision-agent.ts  x402.d.ts
agents/src/lib/: casper-key.ts  casper-rpc.ts
agents/src/mcp/: casper-mcp-client.ts  csprtrade-mcp-client.ts
agents/src/test/: agents.test.ts  guardian-agent.test.ts  prd_agents.test.ts  risk-agent.test.ts  vision-agent.test.ts
agents/src/types/: index.ts
agents/src/x402/: client.ts  facilitator.ts  mock-server.ts  stream-engine.ts
agents/src/x402/test/: x402.test.ts
backend/: jest.config.js  package.json  tsconfig.json
backend/src/: index.ts
backend/src/db/: local_db.json  schema.sql  supabase.ts
backend/src/hooks/: cspr-cloud-sse.ts
backend/src/lib/: casper-rpc.ts  facilitator.ts
backend/src/routes/: assets.ts  carbon.ts  lending.ts  maintenance.ts  marketplace.ts  owner.ts  pricing.ts  rentals.ts  stream.ts  vision.ts
backend/src/test/: backend.test.ts  carbon-assets.test.ts  lending.test.ts  owner.test.ts  prd_backend.test.ts  stream.test.ts
contracts/: Cargo.toml  Odra.toml  casper-wasm.json
contracts/.cargo/: config.toml
contracts/asset_registry/: Cargo.toml
contracts/asset_registry/src/: lib.rs
contracts/asset_registry/wasm/: AssetRegistry.wasm  AssetRegistry_clean.wasm
contracts/carbon_credits/: Cargo.toml
contracts/carbon_credits/src/: lib.rs
contracts/carbon_credits/wasm/: CarbonCredit.wasm
contracts/fractional_registry/: Cargo.toml
contracts/fractional_registry/src/: lib.rs
contracts/lending_pool/: Cargo.toml  build.rs
contracts/lending_pool/src/: lib.rs
contracts/lending_pool/wasm/: LendingPool.wasm
contracts/rental_escrow/: Cargo.toml
contracts/rental_escrow/src/: lib.rs
contracts/rental_escrow/wasm/: RentalEscrow.wasm
contracts/wasm/: AssetRegistry.wasm  CarbonCredit.wasm  FractionalRegistry.wasm  LendingPool.wasm  RentalEscrow.wasm
docs/: agent-specs.md  architecture.md  demo-setup.md
scripts/: check-balance-simple.js  check.js  deploy-and-verify-testnet.js  deploy-and-verify-testnet.ts  deploy-testnet.js  deploy-v2-testnet.js  deploy-v3-testnet.js  deploy-v4-testnet.js  deployment-results-reconciled.json  deployment-results-v2.json  deployment-results-v3.json  deployment-results-v4.json  deployment-results.json  e2e-verification-report.json  e2e-verify-testnet.ts  generate-keys.js  generate-keys.ts  package.json  real-transactions.json  simulate-ecosystem.ts  submit-real-transactions.js  sync-env.js  test-balance.js  test-rpc-nodes.js  tsconfig.json
ui/: .vercelignore  package.json  playwright.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/v1/[...path]/: route.ts
ui/app/carbon/: page.tsx
ui/app/invest/: page.tsx
ui/app/lender/: page.tsx
ui/app/maintenance/: page.tsx
ui/app/marketplace/: page.tsx
ui/app/onboard/: page.tsx
ui/app/portfolio/: page.tsx
ui/app/rental/[assetId]/live/: page.tsx
ui/components/: footer.tsx  header.tsx  hero-section.tsx  lab-notes.tsx  projects-grid.tsx  theme-changer.tsx  workbench.tsx
ui/components/public/notes/: notes-page-content.tsx
ui/lib/: blog-data.tsx  casper-click.tsx  themes.ts
ui/tests/: e2e.spec.ts
