[workspace]
exclude = ['sample']
members = [
    "asset_registry",
    "lending_pool",
    "rental_escrow",
    "fractional_registry",
    "carbon_credits",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["AssetPilot Team"]
license     = "Apache-2.0"

[workspace.dependencies]
odra        = { version = "2.8.0", default-features = false }
odra-test   = { version = "2.8.0" }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
panic         = "abort"

[profile.dev]
panic = "abort"


