[workspace]
exclude = ['sample']
members = [
    "asset_registry",
    "lending_pool",
    "rental_escrow",
    "fractional_registry",
    "carbon_credits",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["AssetPilot Team"]
license     = "Apache-2.0"

[workspace.dependencies]
odra        = { version = "2.8.0", default-features = false }
odra-test   = { version = "2.8.0" }
# Forces openssl-sys (pulled in transitively via odra-cli -> casper-client ->
# reqwest -> native-tls) to build OpenSSL from source instead of requiring a
# system pkg-config + libssl-dev install. Needed for `cargo test` on hosts
# without those system packages (e.g. a fresh WSL/CI image); a C compiler +
# perl + make are the only requirements, which the Rust toolchain already
# needs anyway.
openssl     = { version = "0.10", features = ["vendored"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
panic         = "abort"

[profile.dev]
panic = "abort"


