[package]
name        = "rental_escrow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { workspace = true }
casper-eip-712 = "1.2.0"

[dev-dependencies]
odra-test = { workspace = true }
# Used only in #[cfg(test)] to generate real Ed25519 keypairs and sign the
# real agreement buffer, so tests exercise verify_rental_agreement's actual
# verification path instead of a bypass. Version pinned to what the workspace
# already resolves transitively (see Cargo.lock).
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["alloc"] }

[features]
default = []
wasm    = []

[build-dependencies]
odra-build = { version = "2.8.2", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.2", default-features = false }
odra-cli = { version = "2.8.2", default-features = false }
openssl = { workspace = true }

[[bin]]
name = "rental_escrow_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "rental_escrow_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "rental_escrow_cli"
path = "bin/cli.rs"
test = false
